--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ httpx==0.25.2
 redis==5.0.1
 openai==1.3.7
 python-telegram-bot==20.7
+beautifulsoup4==4.12.2
+lxml==4.9.3
+python-dateutil==2.8.2
 
