--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "dependencies": {
     "next": "14.0.4",
     "react": "^18.2.0",
